<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/help"
            android:icon="@drawable/home_drawer_help_icon"
            android:title="@string/activity_home_drawer_help" />
        <item
            android:id="@+id/stop_service"
            android:icon="@drawable/home_drawer_stop_icon"
            android:title="@string/activity_home_drawer_stop_service" />

        <item
            android:id="@+id/aboutus"
            android:icon="@drawable/home_drawer_about_us_icon"
            android:title="@string/activity_home_drawer_about_us" />
    </group>



</menu>
