<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_quiz_gradient_background"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view1"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/fragment_quiz_help_feature1"
                    android:textAlignment="center"
                    android:textColor="@color/activity_help_text_color"
                    android:textSize="20dp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/fragment_quiz_help_description1"
                    android:textColor="@color/activity_help_text_color"
                    android:textSize="14dp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/fragment_quiz_help_feature2"
                    android:textAlignment="center"
                    android:textColor="@color/activity_help_text_color"
                    android:textSize="20dp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/fragment_quiz_help_description2"
                    android:textColor="@color/activity_help_text_color"
                    android:textSize="14dp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view3"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/fragment_quiz_help_feature3"
                    android:textAlignment="center"
                    android:textColor="@color/activity_help_text_color"
                    android:textSize="20dp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/fragment_quiz_help_description3"
                    android:textColor="@color/activity_help_text_color"
                    android:textSize="14dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view4"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/fragment_quiz_help_feature4"
                    android:textAlignment="center"
                    android:textColor="@color/activity_help_text_color"
                    android:textSize="20dp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/fragment_quiz_help_description4"
                    android:textColor="@color/activity_help_text_color"
                    android:textSize="14dp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view5"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/fragment_quiz_help_feature5"
                    android:textAlignment="center"
                    android:textColor="@color/activity_help_text_color"
                    android:textSize="20dp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/fragment_quiz_help_description5"
                    android:textColor="@color/activity_help_text_color"
                    android:textSize="14dp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view6"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/fragment_quiz_help_feature6"
                    android:textAlignment="center"
                    android:textColor="@color/activity_help_text_color"
                    android:textSize="20dp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/fragment_quiz_help_description6"
                    android:textColor="@color/activity_help_text_color"
                    android:textSize="14dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view7"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            card_view:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/fragment_quiz_help_feature7"
                    android:textAlignment="center"
                    android:textColor="@color/activity_help_text_color"
                    android:textSize="20dp" />

                <com.codesgood.views.JustifiedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/fragment_quiz_help_description7"
                    android:textColor="@color/activity_help_text_color"
                    android:textSize="14dp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>