<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_quiz_gradient_background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="hms.quiz.client.activities.ScoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/wishing_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_score_congratulations_button_display"
                    android:textAlignment="center"
                    android:textColor="@color/activity_score_body_text_color"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_score_congratulations_button_underline_display"
                    android:textAlignment="center"
                    android:textColor="@color/activity_score_body_text_color"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/total_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/activity_score_button_display"
                    android:textColor="@color/activity_score_total_score_text_view_font_color"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/answered_ques"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/activity_score_answered_questions_text"
                    android:textAlignment="center"
                    android:textColor="@color/activity_score_body_text_color"
                    android:textSize="18dp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/wrong_ans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/activity_score_possibility_for_getting_correct_ans_text"
                    android:textAlignment="center"
                    android:textColor="@color/activity_score_body_text_color"
                    android:textSize="18dp"
                    android:visibility="visible" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/piechart"
                    android:layout_width="220dp"
                    android:layout_height="220dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/activity_score_play_now_button_background"
                    android:drawableLeft="@drawable/activity_home_start_icon"
                    android:onClick="playNow"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/activity_score_play_button_display"
                    android:textColor="@color/activity_score_play_now_button_text_color"
                    android:textSize="20dp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>
